0.1.16: setFieldValue defers action until field exists in DOM; generic Log model; convenience functions for tracking ip addresses, encrypting passwords, ascertaining location data based on zip code, and sending email; info bubbles refresh position on show to account for moving targets; rich input extracts field value with getFieldValue (which takes blurring into account), returns the input node itself, and now ends with a clearnode by default; firstLastLink builds name node with a built-in refresh function; conversationInput falls back to default charlimit (500) and supports comment prefixing; wysiwygize enqueues callbacks until node is ready (preventing possible race conditions), avoids previously-possible recursion traps, and optionally alerts the user and triggers a callback if/when tinymce adjusts markup; strip_punctuation and strip_html utility functions; css pointer class; improved blurField class swapping; showHideSet.

--- a/cantools.css
+++ b/cantools.css
@@ -1,6 +1,6 @@
 /*****
  * cantools.css
- * version 0.1.15
+ * version 0.1.16
  * MIT License:
 
 Copyright (c) 2011 Civil Action Network
@@ -257,6 +257,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
 
 .fullwidth {
     width: 100%;
+}
+
+.pointer {
+    cursor: pointer;
 }
 
 .basicpopup {
